# untranslatable

./: README.md
dotnet/: .gitignore  Untranslatable.sln
dotnet/src/Untranslatable.Api/: HostEnvironmentExtensions.cs  Program.cs  ServiceCollectionExtensions.cs  Untranslatable.Api.csproj  appsettings.json
dotnet/src/Untranslatable.Api/Controllers/: UntranslatableController.cs
dotnet/src/Untranslatable.Api/Controllers/Extensions/: UntranslatableWordExtensions.cs
dotnet/src/Untranslatable.Api/Models/: UntranslatableWordDto.cs
dotnet/src/Untranslatable.Api/Monitoring/: MonitoringSettings.cs
dotnet/src/Untranslatable.Api/Properties/: launchSettings.json
dotnet/src/Untranslatable.Data/: IWordsDataSource.cs  IWordsRepository.cs  Untranslatable.Data.csproj  UntranslatableWord.cs  WordsDataSource.cs  WordsRepository.cs  WordsRepositorySettings.cs
dotnet/src/Untranslatable.Shared/: Untranslatable.Shared.csproj
dotnet/src/Untranslatable.Shared/Monitoring/: MetricsFactory.cs  TimeMeasurement.cs
python/: .flaskenv  .gitignore  README.md  app.py  docker-compose.yml  otel-collector-config.yml  setup.cfg  word.py
python/data/: file_reader.py
unstranslatable-py/: MANIFEST.in  setup.cfg
unstranslatable-py/data/: data.json  file_reader.py
unstranslatable-py/entities/: unstranslatable.py
