[metadata]
name = unstranslatable
version = 0.0.1
url=https://github.com/radra23/untranslatable/tree/main/python

[options]
packages = find:
include_package_data = True
install_requires =
    requests
    dataclasses-json <= 0.5.7
    Flask <= 2.1.3
    Flask-RESTful <= 0.3.9
    python-dotenv <= 0.20.0
    opentelemetry-api == 1.11.1
    opentelemetry-sdk == 1.11.1
    opentelemetry-instrumentation == 0.30b1
    opentelemetry-distro <= 0.32b0
    opentelemetry-instrumentation-flask <= 0.30b1
    opentelemetry-instrumentation-requests <= 0.32b0
    opentelemetry-exporter-jaeger <= 1.14.1