[metadata]
name = untranslatable
version = 0.0.1
url=https://github.com/radra23/untranslatable/tree/main/python

[options]
packages = find:
include_package_data = True
install_requires =
    requests
    Flask <= 2.1.3
    python-dotenv <= 0.20.0
    opentelemetry-distro
    opentelemetry-exporter-jaeger <= 1.11.1
    opentelemetry-instrumentation-flask <= 0.32b0
    opentelemetry-instrumentation-urllib3 <= 0.32b0
